--- a/style.css
+++ b/style.css
@@ -36,14 +36,14 @@ body {
 }
 
 .sky {
-    background-color: blue;
+    background-image: url('fb-game-background.png');
     width: 500px;
     height: 580px;
     position: absolute;
 }
 
 .ground {
-    background-color: brown;
+    background-image: url('bottom-background.png');
     width: 500px;
     height: 150px;
     position: absolute;
@@ -52,7 +52,7 @@ body {
 }
 
 .bird {
-    background-color: yellow;
+    background-image: url('flappy-bird.png');
     position: absolute;
     width: 60px;
     height: 45px;
@@ -74,3 +74,40 @@ body {
     height: 300px;
     position: absolute;
 }
+
+@keyframes slideright {
+    from {
+        background-position: 10000%;
+    }
+    to {
+        background-position: 0%;
+    }
+  }
+  
+  @-webkit-keyframes slideright {
+    from {
+        background-position: 10000%;
+    }
+    to {
+        background-position: 0%;
+    }
+  }
+
+.game-container {
+    height: 150px;
+    width: 580px;
+    left: 80px;
+    position: absolute;
+}
+
+  .ground-moving {
+    position: absolute;
+    top: 580px;
+    height: 150px;
+    background-image: url('bottom-background.png');
+    background-repeat: repeat-x;
+    animation: slideright 100s infinite linear;
+    -webkit-animation: slideright 100s infinite linear;
+    width: 100%;
+    z-index: +1;
+  }
